# project_olx

./: .env.example  Makefile  TODO  pyproject.toml
apps/: admin.py  apps.py  consumer.py  filters.py  forms.py  routing.py  signals.py  urls.py  views.py
apps/fixtures/: ann_images.json  announcements.json  categories.json  city.json  regions.json  users.json
apps/migrations/: 0001_initial.py  0002_remove_announcement_discount.py  0003_announcement_user_alter_announcement_category.py  0004_favorite.py  0005_category_count_products.py  0006_alter_favorite_unique_together_and_more.py  0007_region_city.py  0008_alter_city_slug_alter_region_slug.py  0009_announcement_city.py  0010_chat_message_chat_chat_buyer_not_seller_and_more.py  0011_announcement_publication.py  0012_remove_chat_chat_buyer_not_seller_and_more.py  0013_remove_message_is_read_message_delivered_at_and_more.py
apps/models/: __init__.py  announcements.py  categories.py  chats.py  region.py  users.py
apps/templatetags/: form_extras.py
root/: asgi.py  settings.py
templates/apps/: add_announcement.html  announcement-list.html  announcement_detail.html  base.html  chat.html  chat_popup.html  favorites.html  main.html
templates/apps/auth/: login.html  profile.html  register.html
